# fix2dict

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
docs/: unveiling-fixtodict.md
fix2dict/: __init__.py  __version__.py  basic_repository_v1.py  description.py  extension_pack.py  fix_version.py  patch.py  repository.py  resources.py  review.py  schema.py  sqlite.py  unified_repository_v1.py
fix2dict/cli/: __init__.py  convert_ep.py  convert_repo.py  deflate.py  ep.py  filter_patch.py  fix_typos.py  inflate.py  jsonpatch.py  main.py  patch.py  repo_b.py  repo_o.py  repo_u.py  review.py  schema.py  sqlite.py  validate.py  xref.py
fix2dict/formats/: basic_repository_v1.py  meta_v1.py  orchestra_v1.py  sqlite.py  unified_repository_v1.py
fix2dict/xml_logic/: __init__.py  elem_abbreviation.py  elem_category.py  elem_component.py  elem_datatype.py  elem_enum.py  elem_field.py  elem_message.py  elem_msg_content.py  elem_phrase.py  elem_section.py  utils.py
fix2json/: __init__.py  __version__.py  description.py  extension_pack.py  fix_version.py  output_formats.py  patch.py  resources.py  review.py  schema.py  utils.py
fix2json/cli/: __init__.py
fix2json/resources/: fix2json-json-schema.json
fix2json/xml_logic/: __init__.py  elem_abbreviation.py  elem_category.py  (+9 more)
scripts/: download_eps.py  download_everything.py  ep_page_to_links.py
tests/: test_basic_repository_v1.py  test_elem_abbreviation.py  test_elem_field.py  test_fix_version.py  test_timestamp.py  text_elem_datatype.py
tools/: download_eps.py  download_everything.py  ep_page_to_links.py
(+21 files in other folders)
