[tool.poetry]
name = "fix2json"
version = "1.0.0"
authors = ["Filippo Costa <filippo@neysofu.me>"]
maintainers = ["Filippo Costa <filippo@neysofu.me>"]
description = "Easy and effective tooling for manipulating FIX Repository data"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
	"Operating System :: OS Independent",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
homepage = "https://github.com/neysofu/fix2json"
repository = "https://github.com/neysofu/fix2json"

[tool.poetry.dependencies]
checksumdir = "^1.2.0"
click = "^8.1.3"
dict-recursive-update = "^1.0.1"
jsonpatch = "^1.32"
jsonschema = "^4.16.0"
natsort = "^8.2.0"
nltk = "^3.7"
python = "^3.7"

[tool.poetry.dev-dependencies]
beautifulsoup4 = "^4.11.1"
black = "*"
flake8 = "*"
isort = "*"
lxml = "^4.9.1"
poethepoet = "^0.16.2"

[tool.poetry.scripts]
fix2json = 'fix2json.cli:cli'

[tool.poe.tasks]
#test = "pytest --cov=poethepoet"                                 # simple command based task
ep-page-to-links = { script = "tools.ep_page_to_links:main" }
tunnel = { shell = "ssh -N -L 0.0.0.0:8080:$PROD:8080 $PROD &" } # shell script based task

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
